make some buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>みなみなみボタン</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-<h1>美波ボタン</h1>
-<button>ﾐﾅﾐﾀﾞﾖ!</button>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>みなみなみボタン</title>
+  <style type="text/css">
+body {
+	background: #eee;
+}
+
+h1 {
+	text-align: center;
+}
+button {
+	color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+	display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+}
+</style>
+</head>
+<body>
+<h1>なみなみボタン</h1>
+<button class="sounds" data-file="1">ﾐﾅﾐﾀﾞﾖ! 1</button>
+<button class="sounds" data-file="2">ﾐﾅﾐﾀﾞﾖ! 2</button>
+<button class="sounds" data-file="3">ﾐﾅﾐﾀﾞﾖ! 3</button>
+<button class="sounds" data-file="4">ﾐﾅﾐﾀﾞﾖ! 4</button>
+<button class="sounds" data-file="5">ﾐﾅﾐﾀﾞﾖ! 5</button>
+<button class="sounds" data-file="6">ﾐﾅﾐﾀﾞﾖ! 6</button>
+<button class="sounds" data-file="7">ﾐﾅﾐﾀﾞﾖ! 7</button>
+<button class="sounds" data-file="8">ﾐﾅﾐﾀﾞﾖ! 8</button>
+<button class="sounds" data-file="9">ﾐﾅﾐﾀﾞﾖ! 9</button>
+<button class="sounds" data-file="10">ﾐﾅﾐﾀﾞﾖ! 10</button>
+<button class="sounds" data-file="11">ﾐﾅﾐﾀﾞﾖ! 11</button>
+<button class="sounds" data-file="12">ﾐﾅﾐﾀﾞﾖ! 12</button>
+<button class="sounds" data-file="13">ﾐﾅﾐﾀﾞﾖ! 13</button>
+<button class="sounds" data-file="14">ﾐﾅﾐﾀﾞﾖ! 14</button>
+<button class="sounds" data-file="15">ﾐﾅﾐﾀﾞﾖ! 15</button>
+<button class="sounds" data-file="16">ﾐﾅﾐﾀﾞﾖ! 16</button>
+<button class="sounds" data-file="17">ﾐﾅﾐﾀﾞﾖ! 17</button>
+<button class="sounds" data-file="18">ﾐﾅﾐﾀﾞﾖ! 18</button>
+<button class="sounds" data-file="19">ﾐﾅﾐﾀﾞﾖ! 19</button>
+<button class="sounds" data-file="20">ﾐﾅﾐﾀﾞﾖ! 20</button>
+<button class="sounds" data-file="21">ﾐﾅﾐﾀﾞﾖ! 21</button>
+<button class="sounds" data-file="22">ﾐﾅﾐﾀﾞﾖ! 22</button>
+<button class="sounds" data-file="23">ﾐﾅﾐﾀﾞﾖ! 23</button>
+<button class="sounds" data-file="24">ﾐﾅﾐﾀﾞﾖ! 24</button>
+<button class="sounds" data-file="25">ﾐﾅﾐﾀﾞﾖ! 25</button>
+<button class="sounds" data-file="26">ﾐﾅﾐﾀﾞﾖ! 26</button>
+<button class="sounds" data-file="27">ﾐﾅﾐﾀﾞﾖ! 27</button>
+<button class="sounds" data-file="28">ﾐﾅﾐﾀﾞﾖ! 28</button>
+<button class="sounds" data-file="29">ﾐﾅﾐﾀﾞﾖ! 29</button>
+<button class="sounds" data-file="30">ﾐﾅﾐﾀﾞﾖ! 30</button>
+<button class="sounds" data-file="31">ﾐﾅﾐﾀﾞﾖ! 31</button>
+<button class="sounds" data-file="32">ﾐﾅﾐﾀﾞﾖ! 32</button>
+<button class="sounds" data-file="33">ﾐﾅﾐﾀﾞﾖ! 33</button>
+<button class="sounds" data-file="34">ﾐﾅﾐﾀﾞﾖ! 34</button>
+<button class="sounds" data-file="35">ﾐﾅﾐﾀﾞﾖ! 35</button>
+<button class="sounds" data-file="36">ﾐﾅﾐﾀﾞﾖ! 36</button>
+<button class="sounds" data-file="37">ﾐﾅﾐﾀﾞﾖ! 37</button>
+<button class="sounds" data-file="38">ﾐﾅﾐﾀﾞﾖ! 38</button>
+<button class="sounds" data-file="39">ﾐﾅﾐﾀﾞﾖ! 39</button>
+<script src="button.js"></script>
+</body>
 </html>
