--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ button {
     background-color: #337ab7;
     border-color: #2e6da4;
 	display: inline-block;
-    margin-bottom: 0;
+    margin-bottom: 3px;
     font-weight: 400;
     text-align: center;
     white-space: nowrap;
