--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ button {
 </style>
 </head>
 <body>
-<h1>なみなみボタン</h1>
+<h1>みなみなみボタン</h1>
 <button class="sounds" data-file="1">ﾐﾅﾐﾀﾞﾖ! 1</button>
 <button class="sounds" data-file="2">ﾐﾅﾐﾀﾞﾖ! 2</button>
 <button class="sounds" data-file="3">ﾐﾅﾐﾀﾞﾖ! 3</button>
@@ -43,7 +43,6 @@ button {
 <button class="sounds" data-file="9">ﾐﾅﾐﾀﾞﾖ! 9</button>
 <button class="sounds" data-file="10">ﾐﾅﾐﾀﾞﾖ! 10</button>
 <button class="sounds" data-file="11">ﾐﾅﾐﾀﾞﾖ! 11</button>
-<button class="sounds" data-file="12">ﾐﾅﾐﾀﾞﾖ! 12</button>
 <button class="sounds" data-file="13">ﾐﾅﾐﾀﾞﾖ! 13</button>
 <button class="sounds" data-file="14">ﾐﾅﾐﾀﾞﾖ! 14</button>
 <button class="sounds" data-file="15">ﾐﾅﾐﾀﾞﾖ! 15</button>
