remove button file not exist

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>みなみなみボタン</title>
   <style type="text/css">
 body {
@@ -51,7 +52,6 @@ button {
 <button class="sounds" data-file="18">ﾐﾅﾐﾀﾞﾖ! 18</button>
 <button class="sounds" data-file="19">ﾐﾅﾐﾀﾞﾖ! 19</button>
 <button class="sounds" data-file="20">ﾐﾅﾐﾀﾞﾖ! 20</button>
-<button class="sounds" data-file="21">ﾐﾅﾐﾀﾞﾖ! 21</button>
 <button class="sounds" data-file="22">ﾐﾅﾐﾀﾞﾖ! 22</button>
 <button class="sounds" data-file="23">ﾐﾅﾐﾀﾞﾖ! 23</button>
 <button class="sounds" data-file="24">ﾐﾅﾐﾀﾞﾖ! 24</button>
