add rights comment for button.js

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ button {
 <button class="sounds" data-file="37">ﾐﾅﾐﾀﾞﾖ! 37</button>
 <button class="sounds" data-file="38">ﾐﾅﾐﾀﾞﾖ! 38</button>
 <button class="sounds" data-file="39">ﾐﾅﾐﾀﾞﾖ! 39</button>
+<!-- I don't own the source code for button.js
+if someone knows who is the author, please let me know -->
 <script src="button.js"></script>
 </body>
 </html>
