--- a/index.html
+++ b/index.html
@@ -41,35 +41,36 @@ button {
 <button class="sounds" data-file="6">ﾐﾅﾐﾀﾞﾖ! 6</button>
 <button class="sounds" data-file="7">ﾐﾅﾐﾀﾞﾖ! 7</button>
 <button class="sounds" data-file="8">ﾐﾅﾐﾀﾞﾖ! 8</button>
-<button class="sounds" data-file="9">ﾐﾅﾐﾀﾞﾖ! 9</button>
-<button class="sounds" data-file="10">ﾐﾅﾐﾀﾞﾖ! 10</button>
-<button class="sounds" data-file="11">ﾐﾅﾐﾀﾞﾖ! 11</button>
-<button class="sounds" data-file="13">ﾐﾅﾐﾀﾞﾖ! 13</button>
-<button class="sounds" data-file="14">ﾐﾅﾐﾀﾞﾖ! 14</button>
-<button class="sounds" data-file="15">ﾐﾅﾐﾀﾞﾖ! 15</button>
-<button class="sounds" data-file="16">ﾐﾅﾐﾀﾞﾖ! 16</button>
-<button class="sounds" data-file="17">ﾐﾅﾐﾀﾞﾖ! 17</button>
-<button class="sounds" data-file="18">ﾐﾅﾐﾀﾞﾖ! 18</button>
-<button class="sounds" data-file="19">ﾐﾅﾐﾀﾞﾖ! 19</button>
-<button class="sounds" data-file="20">ﾐﾅﾐﾀﾞﾖ! 20</button>
-<button class="sounds" data-file="22">ﾐﾅﾐﾀﾞﾖ! 22</button>
-<button class="sounds" data-file="23">ﾐﾅﾐﾀﾞﾖ! 23</button>
-<button class="sounds" data-file="24">ﾐﾅﾐﾀﾞﾖ! 24</button>
-<button class="sounds" data-file="25">ﾐﾅﾐﾀﾞﾖ! 25</button>
-<button class="sounds" data-file="26">ﾐﾅﾐﾀﾞﾖ! 26</button>
-<button class="sounds" data-file="27">ﾐﾅﾐﾀﾞﾖ! 27</button>
-<button class="sounds" data-file="28">ﾐﾅﾐﾀﾞﾖ! 28</button>
-<button class="sounds" data-file="29">ﾐﾅﾐﾀﾞﾖ! 29</button>
-<button class="sounds" data-file="30">ﾐﾅﾐﾀﾞﾖ! 30</button>
-<button class="sounds" data-file="31">ﾐﾅﾐﾀﾞﾖ! 31</button>
-<button class="sounds" data-file="32">ﾐﾅﾐﾀﾞﾖ! 32</button>
-<button class="sounds" data-file="33">ﾐﾅﾐﾀﾞﾖ! 33</button>
-<button class="sounds" data-file="34">ﾐﾅﾐﾀﾞﾖ! 34</button>
-<button class="sounds" data-file="35">ﾐﾅﾐﾀﾞﾖ! 35</button>
-<button class="sounds" data-file="36">ﾐﾅﾐﾀﾞﾖ! 36</button>
-<button class="sounds" data-file="37">ﾐﾅﾐﾀﾞﾖ! 37</button>
-<button class="sounds" data-file="38">ﾐﾅﾐﾀﾞﾖ! 38</button>
-<button class="sounds" data-file="39">ﾐﾅﾐﾀﾞﾖ! 39</button>
+<button class="sounds" data-file="10">ﾐﾅﾐﾀﾞﾖ! 9</button>
+<button class="sounds" data-file="11">ﾐﾅﾐﾀﾞﾖ! 10</button>
+<button class="sounds" data-file="13">ﾐﾅﾐﾀﾞﾖ! 11</button>
+<button class="sounds" data-file="14">ﾐﾅﾐﾀﾞﾖ! 12</button>
+<button class="sounds" data-file="16">ﾐﾅﾐﾀﾞﾖ! 13</button>
+<button class="sounds" data-file="18">ﾐﾅﾐﾀﾞﾖ! 14</button>
+<button class="sounds" data-file="20">ﾐﾅﾐﾀﾞﾖ! 15</button>
+<button class="sounds" data-file="23">ﾐﾅﾐﾀﾞﾖ! 16</button>
+<button class="sounds" data-file="24">ﾐﾅﾐﾀﾞﾖ! 17</button>
+<button class="sounds" data-file="25">ﾐﾅﾐﾀﾞﾖ! 18</button>
+<button class="sounds" data-file="26">ﾐﾅﾐﾀﾞﾖ! 19</button>
+<button class="sounds" data-file="28">ﾐﾅﾐﾀﾞﾖ! 20</button>
+<button class="sounds" data-file="29">ﾐﾅﾐﾀﾞﾖ! 21</button>
+<button class="sounds" data-file="31">ﾐﾅﾐﾀﾞﾖ! 22</button>
+<button class="sounds" data-file="33">ﾐﾅﾐﾀﾞﾖ! 23</button>
+<button class="sounds" data-file="34">ﾐﾅﾐﾀﾞﾖ! 24</button>
+<button class="sounds" data-file="36">ﾐﾅﾐﾀﾞﾖ! 25</button>
+<button class="sounds" data-file="38">ﾐﾅﾐﾀﾞﾖ! 26</button>
+</br><hr>
+<button class="sounds" data-file="17">ﾐﾅﾐﾅﾐ...ﾐﾅﾐﾀﾞﾖ!</button>
+<button class="sounds" data-file="19">ﾐﾅﾐ(???)</button>
+<button class="sounds" data-file="30">ｽﾞｯﾄﾐﾅﾐ</button>
+<button class="sounds" data-file="27">ﾐﾅﾐﾃﾞｼﾀ</button>
+<button class="sounds" data-file="32">ﾏﾀﾞﾐﾅﾐﾀﾞﾖ!</button>
+<button class="sounds" data-file="15">ﾐﾅﾐﾀﾞｶﾗ 1</button>
+<button class="sounds" data-file="22">ﾐﾅﾐﾀﾞｶﾗ 2</button>
+<button class="sounds" data-file="35">ﾐﾅﾐﾀﾞｶﾗ 3</button>
+<button class="sounds" data-file="37">ﾐﾅﾐﾀﾞｶﾗ 4</button>
+<button class="sounds" data-file="39">ﾐﾅﾐﾀﾞｶﾗ 5</button>
+<button class="sounds" data-file="9">ﾐﾅﾐﾀﾞｰｽ</button>
 <!-- I don't own the source code for button.js
 if someone knows who is the author, please let me know -->
 <script src="button.js"></script>
