title and twitter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>みなみなみボタン</title>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <style type="text/css">
 body {
 	background: #eee;
@@ -33,6 +34,10 @@ button {
 </head>
 <body>
 <h1>みなみなみボタン</h1>
+<a href="https://twitter.com/37373v?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-lang="ja" data-show-count="false">Follow @37373v</a>
+<hr>
+<h2>みなみだよ！</h2>
+<div>
 <button class="sounds" data-file="1">ﾐﾅﾐﾀﾞﾖ! 1</button>
 <button class="sounds" data-file="2">ﾐﾅﾐﾀﾞﾖ! 2</button>
 <button class="sounds" data-file="3">ﾐﾅﾐﾀﾞﾖ! 3</button>
@@ -59,7 +64,10 @@ button {
 <button class="sounds" data-file="34">ﾐﾅﾐﾀﾞﾖ! 24</button>
 <button class="sounds" data-file="36">ﾐﾅﾐﾀﾞﾖ! 25</button>
 <button class="sounds" data-file="38">ﾐﾅﾐﾀﾞﾖ! 26</button>
-</br><hr>
+</div>
+<hr>
+<h2>他</h2>
+<div>
 <button class="sounds" data-file="17">ﾐﾅﾐﾅﾐ...ﾐﾅﾐﾀﾞﾖ!</button>
 <button class="sounds" data-file="19">ﾐﾅﾐ(???)</button>
 <button class="sounds" data-file="30">ｽﾞｯﾄﾐﾅﾐ</button>
@@ -71,6 +79,7 @@ button {
 <button class="sounds" data-file="37">ﾐﾅﾐﾀﾞｶﾗ 4</button>
 <button class="sounds" data-file="39">ﾐﾅﾐﾀﾞｶﾗ 5</button>
 <button class="sounds" data-file="9">ﾐﾅﾐﾀﾞｰｽ</button>
+</div>
 <!-- I don't own the source code for button.js
 if someone knows who is the author, please let me know -->
 <script src="button.js"></script>
