Add the other buttons

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ button {
 <button class="sounds" data-file="39">ﾐﾅﾐﾀﾞｶﾗ 5</button>
 <button class="sounds" data-file="9">ﾐﾅﾐﾀﾞｰｽ</button>
 </div>
+<h2>他2</h2>
+<div>
+<button class="sounds" data-file="わら">笑い声</button>
+<button class="sounds" data-file="うんち">うんち</button>
+<button class="sounds" data-file="ゴミ">ゴミ</button>
+<button class="sounds" data-file="痛い">痛い</button>
+</div>
 <!-- I don't own the source code for button.js
 if someone knows who is the author, please let me know -->
 <script src="button.js"></script>
