Add twitter timeline

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@ button {
     line-height: 1.42857143;
     border-radius: 4px;
 }
+
+#timeline {
+  margin:10px;
+  width:auto;
+}
 </style>
 </head>
 <body>
 <h1>みなみなみボタン</h1>
-<a href="https://twitter.com/37373v?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-lang="ja" data-show-count="false">Follow @37373v</a>
 <hr>
 <h2>みなみだよ！</h2>
 <div>
@@ -85,6 +89,11 @@ button {
 <button class="sounds" data-file="うんち">うんち</button>
 <button class="sounds" data-file="ゴミ">ゴミ</button>
 <button class="sounds" data-file="痛い">痛い</button>
+</div>
+<hr>
+<div id="timeline">
+  <a href="https://twitter.com/37373v?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-lang="ja" data-show-count="false">Follow 美波七海@37373v</a></br>
+  <a class="twitter-timeline" data-lang="ja" data-width="480" data-height="360" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/37373v?ref_src=twsrc%5Etfw">Tweets by 37373v</a>
 </div>
 <!-- I don't own the source code for button.js
 if someone knows who is the author, please let me know -->
